--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "type": "module",
   "scripts": {
-    "start": "nodemon index.js"
+    "start": "nodemon index.js",
+    "heroku-postbuild": "NPM_CONFIG_PRODUCTION=false npm install --prefix client && npm run build --prefix client"
   },
   "keywords": [],
   "author": "",
@@ -20,5 +21,6 @@
     "mongoose": "^5.12.3",
     "nodemon": "^2.0.7",
     "path": "^0.12.7"
-  }
+  },
+  "engines": {"node": "14.15.1"}
 }
